# AdaRubrics

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
adarubric/: __init__.py  config.py  pipeline.py
adarubric/analysis/: __init__.py  reliability.py
adarubric/core/: __init__.py  exceptions.py  models.py  types.py
adarubric/evaluator/: __init__.py  aggregator.py  base.py  prompts.py  trajectory_evaluator.py
adarubric/filter/: __init__.py  base.py  threshold.py
adarubric/generator/: __init__.py  base.py  llm_generator.py  prompts.py
adarubric/io/: __init__.py  serialization.py
adarubric/llm/: __init__.py  base.py  json_extract.py  openai_client.py  vllm_client.py
adarubric/reward/: __init__.py  scalers.py
examples/: quickstart.py  supply_chain_eval.py
scripts/: ci.sh
tests/: conftest.py  test_analysis.py  test_config.py  test_evaluator.py  test_filter.py  test_generator.py  test_io.py  test_json_extract.py  test_models.py  test_pipeline.py  test_reward.py
