[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adarubric"
version = "0.1.0"
description = "Adaptive Dynamic Rubric Evaluator for Agent Trajectories"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Liang Ding", email = "liangding.academic@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=1.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
# vLLM 及其 NVIDIA 依赖仅在 Linux 上提供 wheel；在 macOS 上安装会失败（如 nvidia-cudnn-frontend）。
vllm = ["vllm>=0.4; sys_platform == 'linux'"]
yaml = ["pyyaml>=6.0"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "S", "B", "A", "C4", "SIM", "RUF"]
ignore = ["S101", "A003", "RUF001", "RUF002"]

[tool.ruff.lint.isort]
known-first-party = ["adarubric"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
